--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
   "devDependencies": {
     "@types/boom": "^7.2.1",
     "@types/node": "latest",
+    "@types/react": "^16.4.18",
     "ava": "^0.25.0",
     "rimraf": "^2.6.2",
     "typescript": "latest"
   },
   "dependencies": {
     "boom": "^7.2.0",
+    "react": "^16.6.0",
     "roddeh-i18n": "^1.1.1"
   }
 }
