--- a/package.json
+++ b/package.json
@@ -60,12 +60,16 @@
     "@fancyapps/fancybox": "^3.5.2",
     "@types/boom": "^7.2.1",
     "@types/micro": "^7.3.3",
+    "@types/moment-timezone": "^0.5.9",
     "@types/node": "latest",
     "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/winston": "^2.4.4",
     "autocompleter": "^3.0.1",
     "ava": "^0.25.0",
     "browserify": "^16.2.3",
     "cash-dom": "^2.3.9",
+    "debug": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "^0.0.2",
     "gulp-clean-css": "^3.10.0",
@@ -89,7 +93,11 @@
     "boom": "^7.2.0",
     "dotenv": "^6.1.0",
     "micro": "^9.3.3",
+    "moment-timezone": "^0.5.21",
     "react": "^16.6.0",
-    "roddeh-i18n": "^1.1.1"
+    "react-dom": "^16.6.0",
+    "roddeh-i18n": "^1.1.1",
+    "standard-text": "^0.1.1",
+    "winston": "^3.1.0"
   }
 }
