--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/node": "latest",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/rss": "^0.0.28",
     "@types/winston": "^2.4.4",
     "autocompleter": "^3.0.1",
     "ava": "^0.25.0",
@@ -101,6 +102,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "roddeh-i18n": "^1.1.1",
+    "rss": "^1.2.2",
     "standard-text": "^0.1.1",
     "winston": "^3.1.0"
   }
