assets upload css, js

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "assets:prod": "set NODE_ENV=production&& gulp --gulpfile ./assets/gulpfile.js",
     "assets:serv": "gulp --gulpfile ./assets/gulpfile.js serv",
     "assets:watch": "gulp --gulpfile ./assets/gulpfile.js watch",
-    "assets:upload:img": "gulp --gulpfile ./assets/gulpfile.js upload:img"
+    "assets:upload:img": "gulp --gulpfile ./assets/gulpfile.js upload:img",
+    "assets:upload": "gulp --gulpfile ./assets/gulpfile.js upload"
   },
   "watch": {
     "start": {
@@ -78,6 +79,7 @@
     "gulp-buffer": "^0.0.2",
     "gulp-clean-css": "^3.10.0",
     "gulp-connect": "^5.6.1",
+    "gulp-gzip": "^1.4.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-rename": "^1.4.0",
