--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/rss": "^0.0.28",
-    "@types/winston": "^2.4.4",
-    "autocompleter": "^3.0.1",
+    "autocompleter": "^3.0.2",
     "ava": "^0.25.0",
     "browserify": "^16.2.3",
     "cash-dom": "^2.3.9",
@@ -104,11 +103,11 @@
     "entipic.url": "^0.1.0",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.21",
+    "ournet.logger": "^0.1.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "roddeh-i18n": "^1.1.1",
     "rss": "^1.2.2",
-    "standard-text": "^0.1.1",
-    "winston": "^3.1.0"
+    "standard-text": "^0.1.1"
   }
 }
