--- a/package.json
+++ b/package.json
@@ -64,11 +64,11 @@
     "@types/chroma-js": "^1.4.0",
     "@types/micro": "^7.3.3",
     "@types/moment-timezone": "^0.5.9",
-    "@types/node": "latest",
-    "@types/react": "^16.4.18",
+    "@types/node": "10.12.7",
+    "@types/react": "^16.7.5",
     "@types/react-dom": "^16.0.9",
     "@types/rss": "^0.0.28",
-    "autocompleter": "^3.0.2",
+    "autocompleter": "^3.0.5",
     "ava": "^0.25.0",
     "browserify": "^16.2.3",
     "cash-dom": "^2.3.9",
@@ -80,7 +80,7 @@
     "gulp-connect": "^5.6.1",
     "gulp-gzip": "^1.4.2",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-rename": "^1.4.0",
     "gulp-rev-all": "^1.0.0",
     "gulp-sass": "^4.0.2",
@@ -91,21 +91,30 @@
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.4.0",
     "rimraf": "^2.6.2",
-    "typescript": "latest",
+    "typescript": "3.1.6",
     "vanilla-lazyload": "^8.17.0",
     "xhr": "^2.5.0"
   },
   "dependencies": {
-    "boom": "^7.2.0",
+    "@ournet/api-client": "^0.1.1",
+    "@ournet/domain": "^0.3.3",
+    "@ournet/horoscopes-domain": "^0.1.1",
+    "@ournet/images-domain": "^0.1.1",
+    "@ournet/news-domain": "^0.1.1",
+    "@ournet/places-domain": "^0.2.0",
+    "@ournet/topics-domain": "^0.1.0",
+    "@ournet/weather-domain": "^0.2.0",
+    "boom": "^7.2.2",
     "chroma-js": "^1.4.0",
     "dotenv": "^6.1.0",
     "ellipsize": "^0.1.0",
     "entipic.url": "^0.1.0",
     "micro": "^9.3.3",
-    "moment-timezone": "^0.5.21",
+    "moment-timezone": "^0.5.23",
+    "ournet.links": "^0.4.6",
     "ournet.logger": "^0.1.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "roddeh-i18n": "^1.1.1",
     "rss": "^1.2.2",
     "standard-text": "^0.1.1"
