--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "patterns": [
         "lib",
         "config",
-        "locales"
+        "locales",
+        "data"
       ],
       "extensions": "js,json",
       "quiet": true,
