--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "inuitcss": "^6.0.0",
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.4.0",
+    "openssl-self-signed-certificate": "^1.1.6",
     "rimraf": "^2.6.2",
     "typescript": "3.1.6",
     "vanilla-lazyload": "^8.17.0",
