--- a/package.json
+++ b/package.json
@@ -98,10 +98,12 @@
     "gulp-uglify": "^3.0.1",
     "gulplog": "^1.0.0",
     "inuitcss": "^6.0.0",
+    "jquery": "^3.3.1",
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.4.0",
     "openssl-self-signed-certificate": "^1.1.6",
     "rimraf": "^2.6.2",
+    "sticky-sidebar": "^3.3.1",
     "typescript": "3.1.6",
     "vanilla-lazyload": "^8.17.0",
     "xhr": "^2.5.0"
