--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/chroma-js": "^1.4.0",
     "@types/micro": "^7.3.3",
     "@types/moment-timezone": "^0.5.9",
+    "@types/ms": "^0.7.30",
     "@types/node": "10.12.7",
     "@types/react": "^16.7.5",
     "@types/react-dom": "^16.0.9",
@@ -107,7 +108,7 @@
     "xhr": "^2.5.0"
   },
   "dependencies": {
-    "@ournet/api-client": "^0.1.1",
+    "@ournet/api-client": "^0.1.2",
     "@ournet/domain": "^0.3.3",
     "@ournet/horoscopes-domain": "^0.1.3",
     "@ournet/images-domain": "^0.1.1",
@@ -123,6 +124,7 @@
     "lang-text": "^0.1.0",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.23",
+    "ms": "^2.1.1",
     "ournet.links": "^0.4.9",
     "ournet.logger": "^0.1.0",
     "react": "^16.6.3",
