--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "ellipsize": "^0.1.0",
     "encodeurl": "^1.0.2",
     "entipic.url": "^0.1.0",
-    "lang-text": "^0.1.0",
+    "localizy": "^0.1.0",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.23",
     "ms": "^2.1.1",
