--- a/public/static/css/rev-manifest.json
+++ b/public/static/css/rev-manifest.json
@@ -1,8 +1,6 @@
 {
   "weather/main.css": "weather/main.8e92ee34.css",
   "weather/page-widget.css": "weather/page-widget.0bfdb938.css",
-  "horoscope/main.css": "horoscope/main.9c2565e4.css",
-  "news/main.css": "news/main.e0dde5c0.css",
-  "news/gallery.css": "news/gallery.abb34dd6.css",
-  "portal/main.css": "portal/main.90b4240f.css"
+  "horoscope/main.css": "horoscope/main.1f00cd4e.css",
+  "news/main.css": "news/main.e0dde5c0.css"
 }
