--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "assets:watch": "gulp --gulpfile ./assets/gulpfile.js watch",
     "assets:upload:img": "gulp --gulpfile ./assets/gulpfile.js upload:img",
     "assets:upload": "gulp --gulpfile ./assets/gulpfile.js upload",
-    "generate-locales": "node ./generate-locales.js"
+    "generate-locales": "localizy -d locales -o src/generated-locales.ts"
   },
   "watch": {
     "start": {
@@ -75,19 +75,19 @@
     "@types/micro": "^7.3.3",
     "@types/moment-timezone": "^0.5.9",
     "@types/ms": "^0.7.30",
-    "@types/node": "10.12.7",
-    "@types/react": "^16.7.5",
+    "@types/node": "10.12.18",
+    "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.9",
     "@types/rss": "^0.0.28",
-    "autocompleter": "^3.0.5",
+    "autocompleter": "^4.0.2",
     "ava": "^0.25.0",
     "browserify": "^16.2.3",
     "cash-dom": "^2.3.9",
     "debug": "^4.1.0",
-    "gulp": "^3.9.1",
-    "gulp-awspublish": "^3.4.0",
+    "gulp": "^4.0.0",
+    "gulp-awspublish": "^4.0.0",
     "gulp-buffer": "^0.0.2",
-    "gulp-clean-css": "^3.10.0",
+    "gulp-clean-css": "^4.0.0",
     "gulp-connect": "^5.6.1",
     "gulp-gzip": "^1.4.2",
     "gulp-if": "^2.0.2",
@@ -98,12 +98,15 @@
     "gulp-tap": "^1.0.1",
     "gulp-uglify": "^3.0.1",
     "gulplog": "^1.0.0",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-pngquant": "^7.0.0",
     "inuitcss": "^6.0.0",
     "jquery": "^3.3.1",
     "npm-run-all": "^4.1.3",
-    "npm-watch": "^0.4.0",
+    "npm-watch": "^0.5.0",
+    "pngquant-bin": "^5.0.1",
     "rimraf": "^2.6.2",
-    "typescript": "3.1.6",
+    "typescript": "3.2.4",
     "vanilla-lazyload": "^8.17.0",
     "xhr": "^2.5.0"
   },
@@ -117,12 +120,12 @@
     "@ournet/topics-domain": "^0.1.0",
     "@ournet/weather-domain": "^0.2.0",
     "boom": "^7.2.2",
-    "chroma-js": "^1.4.0",
+    "chroma-js": "^2.0.2",
     "dotenv": "^6.1.0",
     "ellipsize": "^0.1.0",
     "encodeurl": "^1.0.2",
     "entipic.url": "^0.1.0",
-    "localizy": "^0.1.0",
+    "localizy": "^0.1.6",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.23",
     "ms": "^2.1.1",
