--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "homepage": "https://github.com/ournet/ournet-web-app#readme",
   "devDependencies": {
-    "@fancyapps/fancybox": "^3.5.2",
+    "@fancyapps/fancybox": "3.3.5",
     "@types/boom": "^7.2.1",
     "@types/chroma-js": "^1.4.0",
     "@types/micro": "^7.3.3",
