weather local symbol names

--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "@ournet/news-domain": "^0.1.1",
     "@ournet/places-domain": "^0.2.0",
     "@ournet/topics-domain": "^0.1.0",
-    "@ournet/weather-domain": "^0.2.0",
+    "@ournet/weather-domain": "^0.2.3",
     "boom": "^7.2.2",
     "chroma-js": "^2.0.2",
     "dotenv": "^6.1.0",
@@ -126,6 +126,7 @@
     "encodeurl": "^1.0.2",
     "entipic.url": "^0.1.0",
     "localizy": "^0.1.6",
+    "metno-symbols": "^0.1.2",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.23",
     "ms": "^2.1.1",
