news video gallery support

--- a/package.json
+++ b/package.json
@@ -112,12 +112,13 @@
   },
   "dependencies": {
     "@ournet/api-client": "^0.1.4",
-    "@ournet/domain": "^0.3.3",
+    "@ournet/domain": "^0.3.4",
     "@ournet/horoscopes-domain": "^0.1.3",
     "@ournet/images-domain": "^0.1.1",
     "@ournet/news-domain": "^0.1.1",
     "@ournet/places-domain": "^0.2.0",
     "@ournet/topics-domain": "^0.1.0",
+    "@ournet/videos-domain": "^0.1.0",
     "@ournet/weather-domain": "^0.2.3",
     "boom": "^7.2.2",
     "chroma-js": "^2.0.2",
@@ -130,7 +131,7 @@
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.23",
     "ms": "^2.1.1",
-    "ournet.links": "^0.4.11",
+    "ournet.links": "^0.4.12",
     "ournet.logger": "^0.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
