--- a/public/static/css/rev-manifest.json
+++ b/public/static/css/rev-manifest.json
@@ -1,8 +1,9 @@
 {
-  "weather/main.css": "weather/main.73c4f85d.css",
+  "weather/main.css": "weather/main.08b0fb5a.css",
   "weather/page-widget.css": "weather/page-widget.0bfdb938.css",
-  "horoscope/main.css": "horoscope/main.65e0cf96.css",
-  "news/main.css": "news/main.87edd385.css",
-  "news/gallery.css": "news/gallery.4bfff43f.css",
-  "portal/main.css": "portal/main.b51775cf.css"
+  "horoscope/main.css": "horoscope/main.cd672974.css",
+  "news/main.css": "news/main.f45b45d0.css",
+  "news/gallery.css": "news/gallery.219c3e32.css",
+  "news/video-embed.css": "news/video-embed.d1aac1f6.css",
+  "portal/main.css": "portal/main.65a84d9d.css"
 }
