--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@fancyapps/fancybox": "3.3.5",
     "@types/boom": "^7.2.1",
     "@types/chroma-js": "^1.4.0",
+    "@types/js-cookie": "^2.2.0",
     "@types/micro": "^7.3.3",
     "@types/moment-timezone": "^0.5.9",
     "@types/ms": "^0.7.30",
@@ -102,6 +103,7 @@
     "imagemin-pngquant": "^7.0.0",
     "inuitcss": "^6.0.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.5.0",
     "pngquant-bin": "^5.0.1",
@@ -111,15 +113,15 @@
     "xhr": "^2.5.0"
   },
   "dependencies": {
-    "@ournet/api-client": "^0.1.5",
-    "@ournet/domain": "^0.3.4",
-    "@ournet/horoscopes-domain": "^0.1.3",
-    "@ournet/images-domain": "^0.1.1",
-    "@ournet/news-domain": "^0.1.1",
-    "@ournet/places-domain": "^0.2.0",
-    "@ournet/topics-domain": "^0.1.0",
-    "@ournet/videos-domain": "^0.1.0",
-    "@ournet/weather-domain": "^0.2.3",
+    "@ournet/api-client": "~0.x.x",
+    "@ournet/domain": "~0.x.x",
+    "@ournet/horoscopes-domain": "~0.x.x",
+    "@ournet/images-domain": "~0.x.x",
+    "@ournet/news-domain": "~0.x.x",
+    "@ournet/places-domain": "~0.x.x",
+    "@ournet/topics-domain": "~0.x.x",
+    "@ournet/videos-domain": "~0.x.x",
+    "@ournet/weather-domain": "~0.x.x",
     "boom": "^7.2.2",
     "chroma-js": "^2.0.2",
     "dotenv": "^6.1.0",
