--- a/package.json
+++ b/package.json
@@ -133,11 +133,12 @@
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.23",
     "ms": "^2.1.1",
-    "ournet.links": "^0.4.15",
+    "ournet.links": "^0.4.16",
     "ournet.logger": "^0.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "rss": "^1.2.2",
+    "sitemap": "^2.1.0",
     "standard-text": "^0.1.1"
   }
 }
