ournet.bg to our.bg

--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
 
-  server_name www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.ournet.bg vremeto.ournet.bg horoscope.ournet.bg news.ournet.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.zborg.ru horoscope.zborg.ru news.zborg.ru pogoda.zborg.ru www.thoi.vn;
+  server_name www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.zborg.ru horoscope.zborg.ru news.zborg.ru pogoda.zborg.ru www.thoi.vn;
 
   gzip on;
   gzip_vary on;
@@ -21,13 +21,13 @@ server {
 
 server {
   listen 80;
-  server_name meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in ournet.bg ournet.ro click.md zborg.ru thoi.vn;
+  server_name meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md zborg.ru thoi.vn;
 
   return 301 $scheme://www.$host$request_uri;
 }
 
 server {
   listen 80;
-  server_name horo.ournet.bg;
-  return 301 $scheme://horoscope.ournet.bg$request_uri;
+  server_name horo.our.bg;
+  return 301 $scheme://horoscope.our.bg$request_uri;
 }
