--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
 
-  server_name www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.zborg.ru horoscope.zborg.ru news.zborg.ru pogoda.zborg.ru www.thoi.vn;
+  server_name www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.zborg.ru horoscope.zborg.ru news.zborg.ru pogoda.zborg.ru www.thoi.vn;
 
   gzip on;
   gzip_vary on;
@@ -11,17 +11,17 @@ server {
     proxy_set_header   X-Real-IP  $remote_addr;
     proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Proto  $scheme;
-    proxy_set_header   Host       $http_host;
+    proxy_set_header   Host $http_host;
     proxy_set_header   X-NginX-Proxy      true;
     proxy_set_header   Connection "";
     proxy_http_version 1.1;
-    proxy_pass         http://localhost:41843;
+    proxy_pass  http://localhost:41843;
   }
 }
 
 server {
   listen 80;
-  server_name meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md zborg.ru thoi.vn;
+  server_name vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md zborg.ru thoi.vn;
 
   return 301 $scheme://www.$host$request_uri;
 }
