--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "rss": "^1.2.2",
+    "sass": "^1.51.0",
     "sitemap": "^2.1.0",
     "standard-text": "^0.1.1"
   }
