--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
 
-  server_name www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.thoi.vn;
+  server_name www.meteo.ng www.vrijeme.one www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.thoi.vn;
 
   gzip on;
   gzip_vary on;
@@ -21,7 +21,7 @@ server {
 
 server {
   listen 80;
-  server_name vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md thoi.vn;
+  server_name meteo.ng vrijeme.one vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md thoi.vn;
 
   return 301 $scheme://www.$host$request_uri;
 }
