--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,10 +1,5 @@
 server {
-  listen 80;
-
   server_name www.meteo.ng www.vrijeme.one www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.thoi.vn;
-
-  gzip on;
-  gzip_vary on;
 
   location / {
     proxy_redirect off;
@@ -15,19 +10,21 @@ server {
     proxy_set_header   X-NginX-Proxy      true;
     proxy_set_header   Connection "";
     proxy_http_version 1.1;
-    proxy_pass  http://localhost:41843;
+    proxy_pass  http://172.26.13.139:41843;
   }
+
+  listen 443 ssl; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/ournet/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/ournet/privkey.pem; # managed by Certbot
+  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+  gzip on;
+  gzip_vary on;
 }
 
 server {
   listen 80;
-  server_name meteo.ng vrijeme.one vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md thoi.vn;
+  server_name *.meteo.ng *.vrijeme.one *.vremenska.rs *.meteo2.kz *.meteo2.lv *.moti2.al *.hava.one *.ournet.it *.ournet.hu *.ournet.cz *.ournet.in *.our.bg *.ournet.ro *.click.md *.thoi.vn;
 
-  return 301 $scheme://www.$host$request_uri;
-}
-
-server {
-  listen 80;
-  server_name horo.our.bg;
-  return 301 $scheme://horoscope.our.bg$request_uri;
+  return 301 https://$host$request_uri;
 }
