--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -13,18 +13,32 @@ server {
     proxy_pass  http://172.26.13.139:41843;
   }
 
-  listen 443 ssl; # managed by Certbot
-  ssl_certificate /etc/letsencrypt/live/ournet/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/ournet/privkey.pem; # managed by Certbot
-  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+  listen 443 ssl;
+  ssl_certificate /etc/letsencrypt/live/ournet/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ournet/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  gzip on;
+  gzip_vary on;
+}
+
+server {
+  server_name meteo.ng vrijeme.one vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md thoi.vn;
+
+  return 301 https://www.$host$request_uri;
+
+  listen 443 ssl;
+  ssl_certificate /etc/letsencrypt/live/ournet/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ournet/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
   gzip on;
   gzip_vary on;
 }
 
 server {
   listen 80;
-  server_name *.meteo.ng *.vrijeme.one *.vremenska.rs *.meteo2.kz *.meteo2.lv *.moti2.al *.hava.one *.ournet.it *.ournet.hu *.ournet.cz *.ournet.in *.our.bg *.ournet.ro *.click.md *.thoi.vn;
+  server_name meteo.ng *.meteo.ng vrijeme.one *.vrijeme.one vremenska.rs *.vremenska.rs meteo2.kz *.meteo2.kz meteo2.lv *.meteo2.lv moti2.al *.moti2.al hava.one *.hava.one ournet.it *.ournet.it ournet.hu *.ournet.hu ournet.cz *.ournet.cz ournet.in *.ournet.in our.bg *.our.bg ournet.ro *.ournet.ro click.md *.click.md thoi.vn *.thoi.vn;
 
   return 301 https://$host$request_uri;
 }
