--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "@ournet/topics-domain": "~0.x.x",
     "@ournet/videos-domain": "~0.x.x",
     "@ournet/weather-domain": "~0.x.x",
+    "axios": "^1.3.4",
     "boom": "^7.2.2",
     "chroma-js": "^2.0.2",
     "dotenv": "^6.1.0",
