--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.9",
     "@types/rss": "^0.0.28",
+    "@types/x-ray": "^2.3.3",
     "autocompleter": "^4.0.2",
     "ava": "^0.25.0",
     "browserify": "^16.2.3",
@@ -142,6 +143,7 @@
     "rss": "^1.2.2",
     "sass": "^1.51.0",
     "sitemap": "^2.1.0",
-    "standard-text": "^0.1.1"
+    "standard-text": "^0.1.1",
+    "x-ray": "^2.3.4"
   }
 }
