--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretest": "npm-run-all clean tsc",
     "test": "ava --no-cache --verbose lib/**/*.test.js",
     "posttest": "npm run clean-test-code",
-    "tsc": "tsc",
+    "tsc": "./node_modules/.bin/tsc",
     "tscw": "tsc -w",
     "preversion": "npm run tsc",
     "postversion": "git push --follow-tags",
@@ -76,11 +76,9 @@
     "@types/micro": "^7.3.3",
     "@types/moment-timezone": "^0.5.9",
     "@types/ms": "^0.7.30",
-    "@types/node": "10.12.18",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.9",
     "@types/rss": "^0.0.28",
-    "@types/x-ray": "^2.3.3",
     "autocompleter": "^4.0.2",
     "ava": "^0.25.0",
     "browserify": "^16.2.3",
@@ -109,7 +107,7 @@
     "npm-watch": "^0.5.0",
     "pngquant-bin": "^5.0.1",
     "rimraf": "^2.6.2",
-    "typescript": "3.2.4",
+    "typescript": "4.2.3",
     "vanilla-lazyload": "^8.17.0",
     "xhr": "^2.5.0"
   },
@@ -123,7 +121,7 @@
     "@ournet/topics-domain": "~0.x.x",
     "@ournet/videos-domain": "~0.x.x",
     "@ournet/weather-domain": "~0.x.x",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "boom": "^7.2.2",
     "chroma-js": "^2.0.2",
     "dotenv": "^6.1.0",
