--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,25 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "outDir": "lib",
-        "rootDir": "./src",
-        "target": "es2017",
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "sourceMap": false,
-        "moduleResolution": "node",
-        "declaration": false,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "allowJs": false,
-        "jsx": "react",
-        "lib": [
-            "es2017",
-            "esnext.asynciterable"
-        ],
-        "strict": true
-    },
-    "formatCodeOptions": {
-        "indentSize": 2,
-        "tabSize": 2
-    },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "outDir": "lib",
+    "rootDir": "./src",
+    "target": "es2017",
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "sourceMap": false,
+    "moduleResolution": "node",
+    "declaration": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "allowJs": false,
+    "jsx": "react",
+    "lib": ["es2017", "esnext.asynciterable"],
+    "strict": true
+  },
+  "formatCodeOptions": {
+    "indentSize": 2,
+    "tabSize": 2
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
