cert-name ournet-ro

--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,5 +1,5 @@
 server {
-  server_name www.meteo.ng www.vrijeme.one www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.ournet.ro meteo.ournet.ro news.ournet.ro horoscop.ournet.ro www.click.md meteo.click.md news.click.md horoscop.click.md www.thoi.vn;
+  server_name www.meteo.ng www.vrijeme.one www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.thoi.vn;
 
   location / {
     proxy_redirect off;
@@ -23,7 +23,7 @@ server {
 }
 
 server {
-  server_name meteo.ng vrijeme.one vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg ournet.ro click.md thoi.vn;
+  server_name meteo.ng vrijeme.one vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg thoi.vn;
 
   return 301 https://www.$host$request_uri;
 
@@ -38,7 +38,7 @@ server {
 
 server {
   listen 80;
-  server_name meteo.ng *.meteo.ng vrijeme.one *.vrijeme.one vremenska.rs *.vremenska.rs meteo2.kz *.meteo2.kz meteo2.lv *.meteo2.lv moti2.al *.moti2.al hava.one *.hava.one ournet.it *.ournet.it ournet.hu *.ournet.hu ournet.cz *.ournet.cz ournet.in *.ournet.in our.bg *.our.bg ournet.ro *.ournet.ro click.md *.click.md thoi.vn *.thoi.vn;
+  server_name meteo.ng *.meteo.ng vrijeme.one *.vrijeme.one vremenska.rs *.vremenska.rs meteo2.kz *.meteo2.kz meteo2.lv *.meteo2.lv moti2.al *.moti2.al hava.one *.hava.one ournet.it *.ournet.it ournet.hu *.ournet.hu ournet.cz *.ournet.cz ournet.in *.ournet.in our.bg *.our.bg thoi.vn *.thoi.vn;
 
   return 301 https://$host$request_uri;
 }
