client_max_body_size 10M

--- a/nginx/ournet-ro.conf
+++ b/nginx/ournet-ro.conf
@@ -44,6 +44,7 @@ server {
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
   gzip on;
   gzip_vary on;
+  client_max_body_size 10M;
 }
 
 server {
