--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "xhr": "^2.5.0"
   },
   "dependencies": {
-    "@ournet/api-client": "~0.x.x",
+    "@ournet/api-client": "~0.4.x",
     "@ournet/domain": "~0.x.x",
     "@ournet/horoscopes-domain": "~0.x.x",
     "@ournet/images-domain": "~0.x.x",
