--- a/package.json
+++ b/package.json
@@ -130,12 +130,13 @@
     "entipic.url": "^0.1.1",
     "i18n-iso-countries": "^7.4.0",
     "localizy": "^0.1.6",
+    "marked": "^8.0.0",
     "metno-symbols": "^0.1.7",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.35",
     "ms": "^2.1.1",
     "news-sources": "^0.1.10",
-    "ournet.links": "^0.4.39",
+    "ournet.links": "^0.4.40",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "rss": "^1.2.2",
