--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/boom": "^7.2.1",
     "@types/chroma-js": "^1.4.0",
     "@types/js-cookie": "^2.2.0",
+    "@types/marked": "^5.0.1",
     "@types/micro": "^7.3.3",
     "@types/moment-timezone": "^0.5.9",
     "@types/ms": "^0.7.30",
@@ -130,7 +131,7 @@
     "entipic.url": "^0.1.1",
     "i18n-iso-countries": "^7.4.0",
     "localizy": "^0.1.6",
-    "marked": "^8.0.0",
+    "marked": "^4.3.0",
     "metno-symbols": "^0.1.7",
     "micro": "^9.3.3",
     "moment-timezone": "^0.5.35",
