portal critical-async css

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "watch": "npm-run-all --parallel web:watch assets:watch",
     "web:watch": "npm-watch start",
     "web:build": "npm-run-all clean generate-locales tsc",
+    "assets:css": "gulp --gulpfile ./assets/gulpfile.js sass",
     "assets:build": "gulp --gulpfile ./assets/gulpfile.js",
     "assets:prod": "set NODE_ENV=production&& gulp --gulpfile ./assets/gulpfile.js",
     "assets:serv": "gulp --gulpfile ./assets/gulpfile.js serv",
@@ -98,6 +99,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-tap": "^1.0.1",
     "gulp-uglify": "^3.0.1",
+    "gulp-webp": "^4.0.1",
     "gulplog": "^1.0.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^7.0.0",
