--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,16 +1,26 @@
 server {
-  server_name www.meteo.ng www.vrijeme.one www.vremenska.rs www.meteo2.kz www.meteo2.lv www.moti2.al www.hava.one www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg www.thoi.vn;
+  server_name www.ournet.ro www.meteo.ng www.vrijeme.one www.vremenska.rs www.meteo2.kz
+    www.meteo2.lv www.moti2.al www.hava.one www.thoi.vn
+    www.ournet.it news.ournet.it meteo.ournet.it oroscopo.ournet.it
+    www.ournet.hu news.ournet.hu horoszkop.ournet.hu idojaras.ournet.hu
+    www.ournet.cz news.ournet.cz horoskop.ournet.cz pocasi.ournet.cz
+    www.ournet.in weather.ournet.in news.ournet.in horoscope.ournet.in
+    www.our.bg vremeto.our.bg horoscope.our.bg news.our.bg
+    news.ournet.ro horoscop.ournet.ro meteo.ournet.ro
+    www.click.md news.click.md horoscop.click.md meteo.click.md
+    www.ournet.es noticias.ournet.es tiempo.ournet.es
+    ;
 
   location / {
     proxy_redirect off;
-    proxy_set_header   X-Real-IP  $remote_addr;
-    proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Proto  $scheme;
-    proxy_set_header   Host $http_host;
-    proxy_set_header   X-NginX-Proxy      true;
-    proxy_set_header   Connection "";
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_set_header Connection "";
     proxy_http_version 1.1;
-    proxy_pass  http://172.26.13.139:41843;
+    proxy_pass http://172.26.13.139:41843;
   }
 
   listen 443 ssl;
@@ -23,7 +33,9 @@ server {
 }
 
 server {
-  server_name meteo.ng vrijeme.one vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it ournet.hu ournet.cz ournet.in our.bg thoi.vn;
+  server_name ournet.ro click.md ournet.es meteo.ng vrijeme.one
+    vremenska.rs meteo2.kz meteo2.lv moti2.al hava.one ournet.it
+    ournet.hu ournet.cz ournet.in our.bg thoi.vn;
 
   return 301 https://www.$host$request_uri;
 
@@ -38,7 +50,12 @@ server {
 
 server {
   listen 80;
-  server_name meteo.ng *.meteo.ng vrijeme.one *.vrijeme.one vremenska.rs *.vremenska.rs meteo2.kz *.meteo2.kz meteo2.lv *.meteo2.lv moti2.al *.moti2.al hava.one *.hava.one ournet.it *.ournet.it ournet.hu *.ournet.hu ournet.cz *.ournet.cz ournet.in *.ournet.in our.bg *.our.bg thoi.vn *.thoi.vn;
+  server_name meteo.ng *.meteo.ng vrijeme.one *.vrijeme.one vremenska.rs *.vremenska.rs
+    meteo2.kz *.meteo2.kz meteo2.lv *.meteo2.lv moti2.al *.moti2.al
+    hava.one *.hava.one ournet.it *.ournet.it ournet.hu *.ournet.hu
+    ournet.cz *.ournet.cz ournet.in *.ournet.in our.bg *.our.bg
+    thoi.vn *.thoi.vn ournet.ro *.ournet.ro click.md *.click.md
+    ournet.es *.ournet.es;
 
   return 301 https://$host$request_uri;
 }
