--- a/nginx/ournet.conf.template
+++ b/nginx/ournet.conf.template
@@ -1,5 +1,5 @@
 server {
-  server_name horo.our.bg horoscop.click.md horoscop.ournet.ro horoscope.our.bg horoscope.ournet.in horoskop.ournet.cz horoszkop.ournet.hu idojaras.ournet.hu meteo.click.md meteo.ournet.ee meteo.ournet.it meteo.ournet.lv meteo.ournet.ro meteo2.lv news.click.md news.ournet.cz news.ournet.hu news.ournet.it news.ournet.ro noticias.ournet.es oroscopo.ournet.it pocasi.ournet.cz tiempo.ournet.es www.click.md www.hava.one www.meteo.ng www.meteo2.kz www.moti2.al www.ournet.cz www.ournet.es www.ournet.hu www.ournet.it www.ournet.ro www.thoi.vn www.vremenska.rs www.vrijeme.one;
+  server_name ALL_HOSTS;
 
   location / {
     proxy_redirect off;
@@ -23,7 +23,7 @@ server {
 }
 
 server {
-  server_name our.bg click.md ournet.ro ournet.in ournet.cz ournet.hu ournet.ee ournet.it ournet.lv lv ournet.es hava.one meteo.ng meteo2.kz moti2.al thoi.vn vremenska.rs vrijeme.one;
+  server_name ALL_DOMAINS;
 
   return 301 https://www.$host$request_uri;
 
@@ -38,7 +38,7 @@ server {
 
 server {
   listen 80;
-  server_name our.bg *.our.bg click.md *.click.md ournet.ro *.ournet.ro ournet.in *.ournet.in ournet.cz *.ournet.cz ournet.hu *.ournet.hu ournet.ee *.ournet.ee ournet.it *.ournet.it ournet.lv *.ournet.lv lv *.lv ournet.es *.ournet.es hava.one *.hava.one meteo.ng *.meteo.ng meteo2.kz *.meteo2.kz moti2.al *.moti2.al thoi.vn *.thoi.vn vremenska.rs *.vremenska.rs vrijeme.one *.vrijeme.one;
+  server_name ALL_80;
 
   return 301 https://$host$request_uri;
 }
