--- a/nginx/ournet.conf.template
+++ b/nginx/ournet.conf.template
@@ -10,7 +10,7 @@ server {
     proxy_set_header X-NginX-Proxy true;
     proxy_set_header Connection "";
     proxy_http_version 1.1;
-    proxy_pass http://172.26.13.139:41843;
+    proxy_pass http://localhost:41843;
   }
 
   listen 443 ssl;
