--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -66,3 +66,27 @@ server {
   gzip on;
   gzip_vary on;
 }
+
+server {
+  server_name olg.ournet.ro;
+
+  location / {
+    proxy_redirect off;
+    proxy_set_header   X-Real-IP  $remote_addr;
+    proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto  $scheme;
+    proxy_set_header   Host $http_host;
+    proxy_set_header   X-NginX-Proxy      true;
+    proxy_set_header   Connection "";
+    proxy_http_version 1.1;
+    proxy_pass  http://localhost:42407;
+  }
+
+  listen 443 ssl;
+  ssl_certificate /etc/letsencrypt/live/ournet/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ournet/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  gzip on;
+  gzip_vary on;
+}
