--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noUnusedParameters": true,
     "allowJs": false,
     "jsx": "react",
-    "lib": ["es2017", "esnext.asynciterable"],
+    "lib": ["es2017", "esnext.asynciterable", "dom"],
     "strict": true
   },
   "formatCodeOptions": {
