--- a/nginx/ournet.conf
+++ b/nginx/ournet.conf
@@ -1,6 +1,6 @@
 server {
   server_name horoscop.click.md horoscop.ournet.ro horoscope.our.bg horoscope.ournet.in horoskop.ournet.cz horoszkop.ournet.hu idojaras.ournet.hu meteo.click.md meteo.ournet.it meteo.ournet.ro news.click.md news.our.bg news.ournet.cz news.ournet.hu news.ournet.in news.ournet.it news.ournet.ro noticias.ournet.es oroscopo.ournet.it pocasi.ournet.cz tiempo.ournet.es vremeto.our.bg weather.ournet.in www.click.md www.hava.one www.meteo.ng www.meteo2.kz www.moti2.al www.our.bg www.ournet.cz www.ournet.es www.ournet.hu www.ournet.in www.ournet.it www.ournet.ro www.thoi.vn www.vremenska.rs www.vrijeme.one;
-
+  client_max_body_size 5M;
   location / {
     proxy_redirect off;
     proxy_set_header X-Real-IP $remote_addr;
